Fixing bugs and adding distractions page

--- a/404.qmd
+++ b/404.qmd
@@ -1,9 +1,8 @@
 ---
 title: "404: Page not found"
 format: html
-editor: visual
 ---
 
-![]("pictures/vecteezy_spongebob-squarepants-cartoon_22036448_215/vecteezy_spongebob-squarepants-cartoon_22036448.jpg")
+<img src="pictures/404_image_no_bg.png" alt="Photo by justinlim on UnSplash" style="height: 100%; width: 100%; object-fit: contain"/>
 
-# Error: 404 Page lost in Bikini Bottom. Spongebob on the case!
+### Error: 404 Oopsie-Daisy, a Minion Mishap! {.center_heading}
